# SpaceTypes

./: .clang-format  .gitignore  Base.h  BaseImpl.h  CMakeLists.txt  LICENSE  LICENSE.md  NormalizedVector.h  NormalizedVector2.h  NormalizedVector2Base.h  NormalizedVectorBase.h  NormalizedXYVector.h  Point.h  Point2.h  Point2Base.h  PointBase.h  PointOrVector.h  README.md  Space.h  SpaceImpl.h  StaticAsserts.h  Vector.h  Vector2.h  Vector2Base.h  VectorBase.h  XYPoint.h  XYVector.h
Tests/: CMakeLists.txt  CatchIncludes.h  CollectionTests.cpp  ExampleTransformManager.h  ExternalIncludes.h  Includes.h  NormalizedVectorTests.cpp  NormalizedXYVectorTests.cpp  PointTests.cpp  Space.sln  SpaceHelpers.h  TestVector.h  VectorTests.cpp  XYPointTests.cpp  XYVectorTests.cpp  catch.hpp  main.cpp  pch.h
Tests/Tests/: BaseImpl.h  CollectionTests.cpp  ExampleImpl.h  ExampleTransformManager.h  NormalizedVector2Tests.cpp  NormalizedVectorTests.cpp  NormalizedXYVectorTests.cpp  Point2Tests.cpp  PointTests.cpp  SpaceHelpers.h  TestVector.cpp  TestVector.h  Tests.vcxproj  Tests.vcxproj.filters  Vector2Tests.cpp  VectorAndPointTests.cpp  VectorTests.cpp  XYPointTests.cpp  XYVectorTests.cpp  main.cpp  pch.h
detail/: Base.h  Helpers.h  NormalizedVector2Base.h  NormalizedVectorBase.h  NormalizedXYVectorBase.h  Point2Base.h  PointBase.h  SpaceImpl.h  StaticAsserts.h  Vector2Base.h  VectorBase.h  XYVectorBase.h
